[project]
name = "erasmus"
version = "24.5.1.dev0"
description = ""
authors = [
  {name = "Bryan Forbes", email = "bryan@reigndropsfall.net"}
]
license = "BSD-3-Clause"
requires-python = ">=3.12,<3.13"
dynamic = ["dependencies"]

[project.scripts]
erasmus = 'erasmus.run:main'

[tool.poetry]
packages = [
  { include = "erasmus" }
]

[tool.poetry.dependencies]
alembic = "1.14.0"
attrs = "24.3.0"
beautifulsoup4 = "4.12.3"
more-itertools = "10.6.0"
"fluent.runtime" = "0.4.0"

[tool.poetry.dependencies.botus_receptus]
git = "https://github.com/bryanforbes/botus_receptus.git"
tag = "v24.12.1"
extras = ["uvloop", "sqlalchemy"]

[tool.poetry.dependencies.discord-py]
version = "2.4.0"
extras = ["speed"]

[tool.poetry.group.dev.dependencies]
asyncpg-stubs = "0.30.0"
black = "24.10.0"
coverage = {version = "7.6.10", extras = ["toml"]}
mypy = "1.14.1"
pre-commit = "4.0.1"
pytest = "8.3.4"
pytest-asyncio = "0.25.2"
pytest-clarity = "1.0.1"
pytest-cov = "6.0.0"
pytest-mock = "3.14.0"
pytest-recording = "0.13.2"
pytest-sugar = "1.0.0"
pytest-xdist = "3.6.1"
ruff = "0.9.1"

[tool.poetry.group.dev.dependencies.pendulum]
version = "3.0.0"
extras = ["test"]

[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.venv
  | htmlcov
)/
'''

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "^\\s+pass$",
  "^\\s*if TYPE_CHECKING:",
  "^\\s*\\.\\.\\.\\s*$"
]
omit = [
  "erasmus/cogs/bible/testing_server_preferences_group.py"
]

[tool.ruff]
extend-exclude = [".venv*"]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
  "ANN", "B", "B9", "BLE", "C", "C4", "C9", "E", "EXE", "F", "FBT", "G",
  "I", "I002", "ISC", "INP", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "Q", "RET",
  "RSE", "S", "SIM", "T10", "T20", "TC", "TID251", "TRY", "UP", "W", "RUF"
]
ignore = ["PLR0913", "PLR2004", "TRY003"]

[tool.ruff.lint.per-file-ignores]
"*.pyi" = ["ANN401", "E501", "E701", "E741", "F401", "F403", "F405", "F811", "FBT001", "FBT002", "PGH003"]
"erasmus/cogs/*.py" = ["FBT"]
"tests/*.py" = ["ANN401", "FBT001", "FBT002", "PGH003", "PLR0912", "S101"]
"alembic/*.py" = ["ANN20", "ANN401", "INP", "PGH003"]

[tool.ruff.lint.isort]
extra-standard-library = ["typing_extensions", "_typeshed"]
known-first-party = ["erasmus"]
known-third-party = ["alembic"]
combine-as-imports = true
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "csv"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.TypeVar".msg = "Use `typing_extensions.TypeVar` instead."


[tool.pyright]
include = ["erasmus", "tests", "stubs"]
stubPath = "./stubs"
venvPath = "."
venv = ".venv"

pythonVersion = "3.12"
reportUnnecessaryTypeIgnoreComment = "warning"
typeCheckingMode = "strict"
reportPrivateUsage = "none"
reportUnusedImport = "none"
reportUnusedVariable = "none"
reportImportCycles = "none"
reportImplicitOverride = "error"
deprecateTypingAliases = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=erasmus --cov-branch --cov-report=term -nauto --dist=loadscope"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry_core==2.0.1"]
build-backend = "poetry.core.masonry.api"
