[project]
name = "erasmus"
version = "24.5.1.dev0"
description = ""
authors = [
  {name = "Bryan Forbes", email = "bryan@reigndropsfall.net"}
]
license = "BSD-3-Clause"
requires-python = ">=3.13,<3.14"
dynamic = ["dependencies"]

[project.scripts]
erasmus = 'erasmus.run:main'

[tool.poetry]
packages = [
  { include = "erasmus" }
]

[tool.poetry.dependencies]
alembic = "1.16.3"
attrs = "25.3.0"
beautifulsoup4 = "4.13.4"
more-itertools = "10.7.0"
"fluent.runtime" = "0.4.0"

[tool.poetry.dependencies.botus_receptus]
git = "https://github.com/bryanforbes/botus_receptus.git"
tag = "v25.6.1"
extras = ["uvloop", "sqlalchemy"]

[tool.poetry.dependencies.discord-py]
version = "2.5.2"
extras = ["speed"]

[tool.poetry.group.dev.dependencies]
asyncpg-stubs = "0.30.2"
basedpyright = "1.29.5"
coverage = {version = "7.9.2", extras = ["toml"]}
mypy = "1.16.1"
pre-commit = "4.2.0"
pytest = "8.4.1"
pytest-asyncio = "1.0.0"
pytest-clarity = "1.0.1"
pytest-cov = "6.2.1"
pytest-mock = "3.14.1"
pytest-recording = "0.13.4"
pytest-sugar = "1.0.0"
pytest-xdist = "3.8.0"
ruff = "0.12.2"

[tool.poetry.group.dev.dependencies.pendulum]
version = "3.1.0"
extras = ["test"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "^\\s+pass$",
  "^\\s*if TYPE_CHECKING:",
  "^\\s*\\.\\.\\.\\s*$"
]
omit = [
  "erasmus/cogs/bible/testing_server_preferences_group.py"
]

[tool.ruff]
extend-exclude = [".venv*"]
line-length = 88
target-version = "py313"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
  "ANN", "B", "B9", "BLE", "C", "C4", "C9", "E", "EXE", "F", "FBT", "G",
  "I", "I002", "ISC", "INP", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "Q", "RET",
  "RSE", "S", "SIM", "T10", "T20", "TC", "TID251", "TRY", "UP", "W", "RUF"
]
ignore = ["PLR0913", "PLR2004", "TRY003"]

[tool.ruff.lint.per-file-ignores]
"*.pyi" = ["ANN401", "E501", "E701", "E741", "F401", "F403", "F405", "F811", "FBT001", "FBT002", "PGH003"]
"erasmus/cogs/*.py" = ["FBT"]
"tests/*.py" = ["ANN401", "FBT001", "FBT002", "PGH003", "PLR0912", "S101"]
"alembic/*.py" = ["ANN20", "ANN401", "INP", "PGH003"]

[tool.ruff.lint.isort]
extra-standard-library = ["typing_extensions", "_typeshed"]
known-first-party = ["erasmus"]
known-third-party = ["alembic"]
combine-as-imports = true
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "csv"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"


[tool.pyright]
include = ["erasmus", "tests"]
exclude = ["alembic"]
venvPath = "."
venv = ".venv"

pythonVersion = "3.13"
reportUnnecessaryTypeIgnoreComment = "warning"
typeCheckingMode = "strict"
reportPrivateUsage = "none"
reportUnusedImport = "none"
reportUnusedVariable = "none"
reportImportCycles = "none"
reportImplicitOverride = "error"
enableExperimentalFeatures = true
deprecateTypingAliases = true

enableTypeIgnoreComments = false
reportIgnoreCommentWithoutRule = "error"
reportPrivateLocalImportUsage = "error"
reportImplicitRelativeImport = "error"
reportImplicitAbstractClass = "error"
reportIncompatibleUnannotatedOverride = "error"
reportInvalidAbstractMethod = "error"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=erasmus --cov-branch --cov-report=term -nauto --dist=loadscope"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry_core==2.1.3"]
build-backend = "poetry.core.masonry.api"
